# ninteg

./: CMakeLists.txt  LICENSE  README.md  build.sh  example.py  pyproject.toml
examples/: bdf-coefs.py  bdf-locus.py  example.py  glycolytic.py  march-leuba.py  skinath.py
ninteg/: __init__.py
src/: adjust.f90  bdf.f90  ctrl.f90  erms.f90  fpi.f90  ivp.f90  lud.f90  lusolve.f90  message.f90  mult.h  ninteg.f90  nonlin.f90  parameters.f90  size.f90  solv.h
